# ekf_based_localization

./: README.md
src/data_publish/: CMakeLists.txt  package.xml
src/data_publish/data/: gps.csv  ground_truth.kml  odometry.csv  time.txt
src/data_publish/data/1. Blocked 1(Nordfriedhof)/: gps.csv  ground_truth.kml
src/data_publish/data/1.1/: gps.csv  ground_truth.kml  odometry.csv  time.txt
src/data_publish/data/1.2/: time.txt
src/data_publish/data/2. Blocked 2 with bad inside VIO(Freimann)/: gps.csv  ground_truth.kml  odometry.csv  time.txt
src/data_publish/data/3. Blocked 3 with bad inside VIO 2(Freimann)/: gps.csv  ground_truth.kml  odometry.csv  time.txt
src/data_publish/data/4. A unknown/: gps.csv  ground_truth.kml  odometry.csv  time.txt
src/data_publish/data/5. home to u6 stable but boring/: gps.csv  ground_truth.kml  odometry.csv  time.txt
src/data_publish/data/6. Home to U6 (good local pose) Also with block A good one!/: gps.csv  ground_truth.kml  odometry.csv  time.txt
src/data_publish/data/7. Home to u6 north stable but error large/: gps.csv  ground_truth.kml  odometry.csv  time.txt
src/data_publish/data/8. Freiheit seems good/: gps.csv  ground_truth.kml  odometry.csv  time.txt
src/data_publish/data/f-old/: ground_truth.kml  odometry.csv  time.txt
src/data_publish/data/f-old/from home to u6 0/: gps.csv  odometry.csv
src/data_publish/data/f-old/from home to u62/: gps.csv  ground_truth.kml  odometry.csv
src/data_publish/data/f-old/from marienplatz/: gps.csv  ground_truth.kml  odometry.csv
src/data_publish/data/f-old/from_home to U6_new/: gps.csv  time.txt
src/data_publish/data/f-old/slow 1/: gps.csv  ground_truth.kml  odometry.csv
src/data_publish/data/f-old/slow 2/: gps.csv  ground_truth.kml
src/data_publish/data/f-old/slow 3/: gps.csv  ground_truth.kml  odometry.csv
src/data_publish/data/f-old/uni to tum 1/: gps.csv  odometry.csv
src/data_publish/data/f-old/uni to tum 2/: gps.csv  odometry.csv
src/data_publish/data/f-old/vio_test/: odometry.csv
src/data_publish/data/from Nordfriedhof to fit/: gps.csv  ground_truth.kml  time.txt
src/data_publish/data/from U6 Ate Heide to .../: gps.csv  ground_truth.kml  odometry.csv  time.txt
src/data_publish/data/from home to u6 1/: gps.csv  ground_truth.kml  odometry.csv  time.txt
src/data_publish/data/from home to u6 2/: gps.csv  ground_truth.kml  odometry.csv  time.txt
src/data_publish/data/from home to u6 3/: gps.csv  ground_truth.kml  odometry.csv  time.txt
src/data_publish/data/vio_test/: odometry.csv
src/data_publish/launch/: data_publish.launch
src/data_publish/rviz/: 1.rviz
src/data_publish/src/: gps_enu_node.cpp  kml_visual.cpp  sensor_data_publish.cpp  vio_visual.cpp
src/geo_transform/: CMakeLists.txt  package.xml
src/geo_transform/include/geo_transform/: geo_transform.h
src/geo_transform/src/: geo_transform.cpp
src/path_publish/: CMakeLists.txt  package.xml
(+12 files in other folders)
