<?xml version="1.0"?>
<package format="2">
  <name>geo_transform</name>
  <version>0.0.1</version>
  <description>Geographical coordinate transform functions (LLA &lt;-&gt; ENU) for ROS</description>


  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- 如果需要tf或tf2则加入(可选) -->
  <!-- <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend> -->

  <export>
  </export>
</package>

